--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ h3 {
 .bullet-list > *::before {
   content: "•";
   color: var(--clr-primary);
+  font-size: var(--fs-500);
   padding-inline: 0.5rem 1rem;
 }
 
