--- a/style.css
+++ b/style.css
@@ -51,11 +51,6 @@ ul > * {
   display: flex;
 }
 
-h3 {
-  color: var(--clr-primary);
-  font-size: var(--fs-400);
-}
-
 .grid-flow {
   display: grid;
   gap: 2.5rem;
@@ -75,6 +70,13 @@ h3 {
 
 .bold-text {
   font-weight: var(--fw-medium);
+}
+
+.color-heading {
+  color: var(--clr-primary);
+  font-family: var(--ff-accent);
+  font-size: var(--fs-500);
+  font-weight: inherit;
 }
 
 .top-image {
