--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ ul > * {
 
 .preparation {
   background-color: var(--clr-neutral-200);
-  padding: 1.4rem;
+  padding: 1.5rem 1.4rem;
   border-radius: 0.75rem;
 }
 
